# at652

./: README.md  _config.yml  _toc.yml  introduction.md  pyproject.toml
notebooks/: advanced_topics.ipynb  introduction.ipynb  ml4rs_lecture1.ipynb  ml4rs_lecture2.ipynb  precipitation_retrieval_mlp.ipynb  precipitation_retrieval_unet.ipynb
notebooks/experiments/: xgboost_sample_efficiency.ipynb
src/at652/: chapter_1.py
